# interoptopus

./: .gitignore  Cargo.toml  Justfile
crates/_old/backend_c/src/: converters.rs  interop.rs
crates/_old/backend_c/src/interop/: functions.rs  types.rs
crates/backend_c/: Cargo.toml
crates/backend_c/src/: codegen.rs  lib.rs  topo.rs
crates/backend_c/tests/: mod.rs
crates/backend_c/tests/reference_project/: CMakeLists.txt  hello_world.h  main_test.cpp  verify.sh
examples/hello_world/: Cargo.toml
examples/hello_world/bindings_c/: CMakeLists.txt  hello_world.h  verify.sh
examples/hello_world/src/: lib.rs
examples/hello_world_c/: CHANGES.md  Cargo.toml  README.md  verify.sh
examples/hello_world_c/app/: main.c
examples/hello_world_c/bindings/: hello_world.h
examples/hello_world_c/src/: lib.rs
examples/hello_world_c/tests/: CMakeLists.txt
