[package]
name = "interoptopus_c"
description = "C header generation for Interoptopus"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
interoptopus.workspace = true

[dev-dependencies]
hello_world_c = { path = "../../examples/hello_world_c" }

[lints]
workspace = true
